--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             const percent = (correctCount / 13) * 100;
 
             let gradeText, gradeClass;
-            if (percent >= 70) { gradeText = 'отлично'; gradeClass = 'excellent'; }
+            if (percent >= 90) { gradeText = 'отлично'; gradeClass = 'excellent'; }
+            else if (percent >= 68) { gradeText = 'хорошо'; gradeClass = 'good'; }
             else if (percent >= 30) { gradeText = 'удовлетворительно'; gradeClass = 'good'; }
             else { gradeText = 'неудовлетворительно'; gradeClass = 'poor'; }
 
