--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .results { margin-top: 40px; }
         .result-header { text-align: center; margin-bottom: 32px; }
         .grade { font-size: 28px; font-weight: bold; margin-top: 12px; }
-        .grade.excellent { color: #10b981; } .grade.good { color: #f59e0b; } .grade.poor { color: #ef4444; }
+        .grade.excellent { color: #10b981; } .grade.good { color: #f59e0b; } .grade.normal { color: #34d399; } .grade.poor { color: #ef4444; }
         .result-item { background: white; border-radius: 16px; padding: 24px; margin-bottom: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); }
         .result-header-text { display: flex; align-items: center; gap: 16px; margin-bottom: 16px; }
         .result-icon { font-size: 24px; font-weight: bold; }
