--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
             let gradeText, gradeClass;
             if (percent >= 90) { gradeText = 'отлично'; gradeClass = 'excellent'; }
-            else if (percent >= 68) { gradeText = 'хорошо'; gradeClass = 'good'; }
+            else if (percent >= 68) { gradeText = 'хорошо'; gradeClass = 'normal'; }
             else if (percent >= 30) { gradeText = 'удовлетворительно'; gradeClass = 'good'; }
             else { gradeText = 'неудовлетворительно'; gradeClass = 'poor'; }
 
